src/objects/Field_History__c.object
<CustomObject>
    <description>ESPSFDCQI-15467</description>
    <fields>
        <fullName>Action_Date_Time__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Action Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ESPSFDCQI-15467</description>
        <label>Action User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value_Long_Text__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>New Value (Long Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value_Long_Text__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Old Value (Long Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Field_API__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Tracked Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Field_Label__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Tracked Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Object__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Tracked Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Record_Id__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <externalId>true</externalId>
        <label>Tracked Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>ESPSFDCQI-15467</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Long Text</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tracked_Object__c</columns>
        <columns>Tracked_Field_API__c</columns>
        <columns>Tracked_Field_Label__c</columns>
        <columns>Tracked_Record_Id__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Long_Text_Histories</fullName>
        <columns>NAME</columns>
        <columns>Tracked_Object__c</columns>
        <columns>Tracked_Field_API__c</columns>
        <columns>Tracked_Field_Label__c</columns>
        <columns>Tracked_Record_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Old_Value_Long_Text__c</columns>
        <columns>New_Value_Long_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Long Text Histories</label>
    </listViews>
    <nameField>
        <displayFormat>FH-{0000000000}</displayFormat>
        <label>Field History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>